--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Regency Ladies</title>
+    <title>Regency Ladies - Contact</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="../stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div class="row">
-           <a href="index.html">
+           <a href="../index.html">
             <div class="col-sm-12">
                 <h1><b>Aurelia DeLyall: Regency Style</b></h1>
                 <h2><b>Regency inspired fashions in generous sizes</b></h2>
@@ -34,33 +34,18 @@
                 </button>
             </div>
                     <ul id="myMenu" class="nav navbar-right collapse navbar-collapse nav-pills nav-justified">
-                        <li><a href="./Pages/about.html">About</a></li>
-                        <li><a href="./Pages/shop.html">Shop</a></li>
-                        <li><a href="./Pages/delivery.html">Delivery</a></li>
-                        <li><a href="./Pages/gallery.html">Galley</a></li>
-                        <li><a href="./Pages/contact.html">Contact</a></li>
+                        <li><a href="./about.html">About</a></li>
+                        <li><a href="./shop.html">Shop</a></li>
+                        <li><a href="./delivery.html">Delivery</a></li>
+                        <li><a href="./gallery.html">Galley</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
-        <div class="row">
+         <div class="row">
             <div class="col-sm-12">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                  <div class="carousel-inner">
-                    <div class="item active">
-                      <img class="d-block w-50" src="./Media/IMG/1.png" alt="First slide">
-                    </div>
-                    <div class="item">
-                      <img class="d-block w-50" src="./Media/IMG/2.png" alt="Second slide">
-                    </div>
-                    <div class="item">
-                      <img class="d-block w-50" src="./Media/IMG/3.png" alt="Third slide">
-                    </div>
-                    <div class="item">
-                      <img class="d-block w-50" src="./Media/IMG/4.png" alt="Third slide">
-                    </div>
-                  </div>
-                </div>
+                
             </div>
         </div>
         <div class="row">
