--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -46,6 +46,7 @@
          <div class="row">
             <div class="col-sm-12">
                 <h3>Construction & Fit</h3>
+                <b>Important:  Please read notes on ‘Construction and Fit’, as these dresses do not fit as standard sizes.</b>
                 <p>
                 <img src="../Media/IMG/C:F1.png" alt="Fit 1" id="Fit1">
                 <img src="../Media/IMG/C:F2.png" alt="Fit 2" id="Fit2"><br /> 
@@ -74,7 +75,19 @@ While it is great if you have them, there is absolutely no need at all to go to 
         <hr>
         <div class="row">
             <div class="col-sm-12">
-                
+               <img src="../Media/IMG/AE21/IMG_2959.JPG" alt="AE21.1" class="dress-long">
+                <img src="../Media/IMG/AE21/IMG_2956.JPG" alt="AE21.2" class="dress-long">
+                <img src="../Media/IMG/AE21/IMG_2957.JPG" alt="AE21.3" class="dress-long">
+                <img src="../Media/IMG/AE21/IMG_2955.JPG" alt="AE21.4" class="dress-wide">
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-sm-12">
+               <img src="../Media/IMG/EW22/IMG_2931.JPG" alt="EW22.1" class="dress-long">
+                <img src="../Media/IMG/EW22/IMG_2930.JPG" alt="EW22.2" class="dress-long">
+                <img src="../Media/IMG/EW22/IMG_2929.JPG" alt="EW22.3" class="dress-long">
+                <img src="../Media/IMG/EW22/IMG_2934.JPG" alt="EW22.4" class="dress-wide">
             </div>
         </div>
         <div class="row">
