--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../stylesheet.css">
-    <link href="https://fonts.googleapis.com/css?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -35,44 +35,16 @@
             </div>
                     <ul id="myMenu" class="nav navbar-right collapse navbar-collapse nav-pills nav-justified">
                         <li><a href="./about.html">About</a></li>
+                        <li><a href="./contr:fit.html">Construction</a></li>
                         <li><a href="./shop.html">Shop</a></li>
                         <li><a href="./delivery.html">Delivery</a></li>
-                        <li><a href="./gallery.html">Galley</a></li>
+                        <li><a href="./gallery.html">Gallery</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
-         <div class="row">
-            <div class="col-sm-12">
-                <h3>Construction & Fit</h3>
-                <b>Important:  Please read notes on ‘Construction and Fit’, as these dresses do not fit as standard sizes.</b>
-                <p>
-                <img src="../Media/IMG/C:F1.png" alt="Fit 1" id="Fit1">
-                <img src="../Media/IMG/C:F2.png" alt="Fit 2" id="Fit2"><br /> 
-                    Dependent upon the type and quality of fabric used and the design of the garment, different finishing methods may have been employed in the construction of the dress.  That is, at the more ‘purse-kind’ end of the range (e.g. upcycled polycotton), and for thicker fabrics, seams may be finished with machine zig-zag stitch, whereas for virgin cottons and satins edges are more likely to be bound or French seamed.
-                </p>
-                <img src="../Media/IMG/C:F4.png" alt="Fit 4" id="Fit4">
-                  <div>
-                   <img src="../Media/IMG/C:F3.png" alt="Fit 3" id="Fit3">
-                   <p>
-                    All bodices are lined with a strong cotton to maintain shape, but skirts are only lined where there is an element of poly in the fabric (thereby preventing ‘cling’), or if the fabric is particularly delicate and requires a lining for decency’s sake.  Skirt linings are usually made of 100% light cotton muslin, and generally fall to the calf.
-                </p>
-                </div>
-                <div>
-                   <img src="../Media/IMG/C:F5.png" alt="Fit 5" id="Fit5">
-                    <p>A detachable, pin-in modesty panel is included with each drawstring garment, which accommodates those fluctuations in size which I find occur from time to time!  Where necklines are fitted with a drawstring ribbon, these have been left pinned in for transit.  I would suggest that, once you have pulled and adjusted them to fit, these should be tacked into place at the neck edge opening to avoid them slipping back into the fabric and causing the back to gape at the neckline.</p>
-                </div>
-                <p>
-                    The underbust on all the drawstring dresses is fitted with elastic, which is fully adjustable to fit.  You will find that there is a loop of elastic protruding from the drawstring channel on the inside of the fabric for this purpose, held in place for transit with a safety pin.  One fitted to size, it may be best to put some strong stitches in the elastic to secure unless you envisage having to make fluctuating adjustments in the future.  Should you find you need to take out some fullness at the bust, I find the best method is to simply put in a couple of vertical seams at the front from neck channel to underbust channel, placed so that they disappear into the gathers. <br /><br />
-Most garments have a reasonable hem which can be let down, and I have in most cases been able to affix any trims away from the hem stitching to make this easier.  To take up dresses with a lace trim or flounce, I would suggest pinching all the way around ABOVE the trim until the desired shortened length is achieved then stitching the resulting channel in place, rather than the more laborious method of taking the trim off, shortening the hem, then replacing the trim.<br /><br />
-Finally, a note on Underwear!!!<br /><br />
-While it is great if you have them, there is absolutely no need at all to go to the trouble of obtaining ‘short stays’, as there are a few unconventional cheats you can employ.  I find a good, supportive balcony bra (M&S padded, underwired ‘Fleur’ is my article of choice here) is adequate for the non-gathered bodices.  However, for the drawstring styles, the gathering tends to fall down the cleavage gap, so I sew a robust panel (use something like ‘Peltex Ultra-Firm Sew-In Stabilizer’) to the bra from centre of cup to centre of cup and tack it in place to the underwiring channels of the bra.  For lighter fabrics, this is sufficient, but for stronger fabrics it is sometimes necessary to place some padding behind the panel in the gap area - I find a rolled-up pair of socks to be just the thing!  Not particularly elegant, but it does the job!
 
-                </p>
-            </div>
-        </div>
-        <hr>
         <div class="row">
             <div class="col-sm-12">
                <img src="../Media/IMG/AE21/IMG_2959.JPG" alt="AE21.1" class="dress-long">
