--- a/Pages/delivery.html
+++ b/Pages/delivery.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../stylesheet.css">
-    <link href="https://fonts.googleapis.com/css?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -35,9 +35,10 @@
             </div>
                     <ul id="myMenu" class="nav navbar-right collapse navbar-collapse nav-pills nav-justified">
                         <li><a href="./about.html">About</a></li>
+                        <li><a href="./contr:fit.html">Construction</a></li>
                         <li><a href="./shop.html">Shop</a></li>
                         <li><a href="./delivery.html">Delivery</a></li>
-                        <li><a href="./gallery.html">Galley</a></li>
+                        <li><a href="./gallery.html">Gallery</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </nav>
