--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -49,10 +49,10 @@
 
         <div class="row">
             <div class="col-sm-12">
-               <img src="../Media/IMG/AE21/IMG_2959.JPG" alt="AE21.1" class="dress-long">
-                <img src="../Media/IMG/AE21/IMG_2956.JPG" alt="AE21.2" class="dress-long">
-                <img src="../Media/IMG/AE21/IMG_2957.JPG" alt="AE21.3" class="dress-long">
-                <img src="../Media/IMG/AE21/IMG_2955.JPG" alt="AE21.4" class="dress-wide">
+               <img src="../Media/IMG/AE21/IMG_2959.JPG" alt="AE21.1" class="dress-long lazy">
+                <img src="../Media/IMG/AE21/IMG_2956.JPG" alt="AE21.2" class="dress-long lazy">
+                <img src="../Media/IMG/AE21/IMG_2957.JPG" alt="AE21.3" class="dress-long lazy">
+                <img src="../Media/IMG/AE21/IMG_2955.JPG" alt="AE21.4" class="dress-wide lazy">
             </div>
         </div>
         <hr>
