--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -49,19 +49,19 @@
 
         <div class="row">
             <div class="col-sm-12">
-               <img src="../Media/IMG/AE21/IMG_2959.JPG" alt="AE21.1" class="dress-long lazy">
-                <img src="../Media/IMG/AE21/IMG_2956.JPG" alt="AE21.2" class="dress-long lazy">
-                <img src="../Media/IMG/AE21/IMG_2957.JPG" alt="AE21.3" class="dress-long lazy">
-                <img src="../Media/IMG/AE21/IMG_2955.JPG" alt="AE21.4" class="dress-wide lazy">
+               <img src="../Media/IMG/AE21/IMG_2959%20copy.JPG" alt="AE21.1" class="dress-long">
+                <img src="../Media/IMG/AE21/IMG_2956%20copy.JPG" alt="AE21.2" class="dress-long">
+                <img src="../Media/IMG/AE21/IMG_2957%20copy.JPG" alt="AE21.3" class="dress-long">
+                <img src="../Media/IMG/AE21/IMG_2955%20copy.jpg" alt="AE21.4" class="dress-wide">
             </div>
         </div>
         <hr>
         <div class="row">
             <div class="col-sm-12">
-               <img src="../Media/IMG/EW22/IMG_2931.JPG" alt="EW22.1" class="dress-long lazy">
-                <img src="../Media/IMG/EW22/IMG_2930.JPG" alt="EW22.2" class="dress-long lazy">
-                <img src="../Media/IMG/EW22/IMG_2929.JPG" alt="EW22.3" class="dress-long lazy">
-                <img src="../Media/IMG/EW22/IMG_2934.JPG" alt="EW22.4" class="dress-wide lazy">
+               <img src="../Media/IMG/EW22/IMG_2931.JPG" alt="EW22.1" class="dress-long">
+                <img src="../Media/IMG/EW22/IMG_2930.JPG" alt="EW22.2" class="dress-long">
+                <img src="../Media/IMG/EW22/IMG_2929.JPG" alt="EW22.3" class="dress-long">
+                <img src="../Media/IMG/EW22/IMG_2934.JPG" alt="EW22.4" class="dress-wide">
             </div>
         </div>
         <div class="row">
