--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -58,10 +58,10 @@
         <hr>
         <div class="row">
             <div class="col-sm-12">
-               <img src="../Media/IMG/EW22/IMG_2931.JPG" alt="EW22.1" class="dress-long">
-                <img src="../Media/IMG/EW22/IMG_2930.JPG" alt="EW22.2" class="dress-long">
-                <img src="../Media/IMG/EW22/IMG_2929.JPG" alt="EW22.3" class="dress-long">
-                <img src="../Media/IMG/EW22/IMG_2934.JPG" alt="EW22.4" class="dress-wide">
+               <img src="../Media/IMG/EW22/IMG_2931%20copy.JPG" alt="EW22.1" class="dress-long">
+                <img src="../Media/IMG/EW22/IMG_2930%20copy.JPG" alt="EW22.2" class="dress-long">
+                <img src="../Media/IMG/EW22/IMG_2929%20copy.JPG" alt="EW22.3" class="dress-long">
+                <img src="../Media/IMG/EW22/IMG_2934%20copy.JPG" alt="EW22.4" class="dress-wide">
             </div>
         </div>
         <div class="row">
