--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -47,7 +47,10 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-12">
+           <div class="col-sm-6">
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam officia perspiciatis culpa nobis laboriosam minima, nisi vitae, eius obcaecati rem laborum voluptatibus sint, architecto blanditiis voluptatem placeat ut quae. Veritatis!</p>
+           </div>
+            <div class="col-sm-6">
                <img src="../Media/IMG/AE21/IMG_2959%20copy.JPG" alt="AE21 Front" class="dress-long myImages">
                 <img src="../Media/IMG/AE21/IMG_2956%20copy.JPG" alt="AE21 Back" class="dress-long myImages">
                 <img src="../Media/IMG/AE21/IMG_2957%20copy.JPG" alt="AE21 Side" class="dress-long myImages">
@@ -56,11 +59,41 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-sm-12">
+           <div class="col-sm-6">
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ut laborum nulla tempore doloremque molestias quidem nostrum fuga, ad delectus dolorum odio dicta qui autem quae impedit dolor! Eveniet, consequatur.</p>
+           </div>
+            <div class="col-sm-6">
                <img src="../Media/IMG/EW22/IMG_2931%20copy.JPG" alt="EW22 Back" class="dress-long myImages">
                 <img src="../Media/IMG/EW22/IMG_2930%20copy.JPG" alt="EW22 Side" class="dress-long myImages">
                 <img src="../Media/IMG/EW22/IMG_2929%20copy.JPG" alt="EW22 Front" class="dress-long myImages">
                 <img src="../Media/IMG/EW22/IMG_2934%20copy.JPG" alt="EW22 Wide" class="dress-wide myImages">
+            </div>
+        </div>
+         <hr>
+        <div class="row">
+                      <div class="col-sm-6">
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ut laborum nulla tempore doloremque molestias quidem nostrum fuga, ad delectus dolorum odio dicta qui autem quae impedit dolor! Eveniet, consequatur.</p>
+           </div>
+            <div class="col-sm-6">
+               <img src="../Media/IMG/EW23/IMG_2938%20copy.JPG" alt="EW23 Back" class="dress-long myImages">
+                <img src="../Media/IMG/EW23/IMG_2939%20copy.JPG" alt="EW23 Side" class="dress-long myImages">
+                <img src="../Media/IMG/EW23/IMG_2940%20copy.JPG" alt="EW23 Front" class="dress-long myImages">
+                <img src="../Media/IMG/EW23/IMG_2941%20copy.JPG" alt="EW23 Wide" class="dress-wide myImages">
+            </div>
+        </div>
+         <hr>
+        <div class="row">
+                       <div class="col-sm-6">
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ut laborum nulla tempore doloremque molestias quidem nostrum fuga, ad delectus dolorum odio dicta qui autem quae impedit dolor! Eveniet, consequatur.</p>
+           </div>
+            <div class="col-sm-6" id="FP21">
+                <img src="../Media/IMG/FP21/IMG_2922%20copy.JPG" alt="FP21 Wide" class="fp-long myImages">
+                <img src="../Media/IMG/FP21/IMG_2924%20copy.JPG" alt="FP21 Side" class="fpr-wide myImages">
+                <img src="../Media/IMG/FP21/IMG_2925%20copy.JPG" alt="FP21 Front" class="fpl-wide myImages">
+                <img src="../Media/IMG/FP21/IMG_2926%20copy.JPG" alt="FP21 Wide" class="fpr-wide myImages">
+                <img src="../Media/IMG/FP21/IMG_2927%20copy.JPG" alt="FP21 Wide" class="fpl-wide myImages">
+            
+                
             </div>
         </div>
         <div id="myModal" class="modal">
