--- a/Pages/ULinks.html
+++ b/Pages/ULinks.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Regency Ladies - Gallery</title>
+    <title>Regency Ladies - Links</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -45,8 +45,12 @@
                 </nav>
             </div>
         </div>
-         <div class="row">
+        <div class="row">
             <div class="col-sm-12">
+                <p>Cannon Hall is a wonderful facility for those interested in Georgian or Regency influences, based in the beautiful rural outskirts of Barnsley, South Yorkshire, and is where I have been fortunate enough to obtain permission to photograph many of my dresses.  It really is well worth a visit – particularly in costume as a participant at the glorious Regency Ball – and relevant information can be found here:  <a href="http://www.cannon-hall.com" target="_blank">http://www.cannon-hall.com/</a>
+                <br /><br />
+                This website has been painstakingly developed and constructed by (<a href="https://rmschrader1994.github.io/Portfolio/" target="_blank"> Rebecca Schrader</a> ), who has shown infinite patience in amending and adapting at frequent intervals to address my whims, changes of mind and niggling tweaks without complaint or contradiction!
+                </p>
             </div>
         </div>
         <div class="row">
