--- a/Pages/about.html
+++ b/Pages/about.html
@@ -39,6 +39,7 @@
                         <li><a href="./shop.html">Shop</a></li>
                         <li><a href="./delivery.html">Delivery</a></li>
                         <li><a href="./gallery.html">Gallery</a></li>
+                        <li><a href="./ULinks.html">Links</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -63,7 +64,7 @@
                  <br />
                      <ul>
                          <li>I am currently selling to the <b class="imp">UK, Ireland & the Channel Islands only.</b>  Apologies if you are overseas, but this is just too small a venture to be able to sustain any losses in transit, damages or return postage costs from other countries.  </li>
-                         <li>Please be sure to read the information on <b class="imp">‘Construction & Sizing’</b> before making a purchase, as these notes are VERY important.</li>
+                         <li>Please be sure to read the information on <b class="imp">‘Construction & Fit’</b> before making a purchase, as these notes are VERY important.</li>
                          <li>If you have already made a purchase, it would be wonderful if you could email me a photograph of yourself wearing your frock in order to share with others, stating where and when you are wearing it, and your name.  <b class="imp">By doing so, you will be giving permission for it to be included in the ‘Gallery’,</b> so you may prefer to provide your Regency pseudonym instead for publication!</li>
                      </ul>
             </div>
