--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -39,6 +39,7 @@
                         <li><a href="./shop.html">Shop</a></li>
                         <li><a href="./delivery.html">Delivery</a></li>
                         <li><a href="./gallery.html">Gallery</a></li>
+                        <li><a href="./ULinks.html">Links</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -46,7 +47,7 @@
         </div>
          <div class="row">
             <div class="col-sm-12">
-                
+                <h2>Email for information or to submit Gallery photographs</h2>
             </div>
         </div>
         <div class="row">
