--- a/Pages/delivery.html
+++ b/Pages/delivery.html
@@ -39,6 +39,7 @@
                         <li><a href="./shop.html">Shop</a></li>
                         <li><a href="./delivery.html">Delivery</a></li>
                         <li><a href="./gallery.html">Gallery</a></li>
+                        <li><a href="./ULinks.html">Links</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -46,7 +47,12 @@
         </div>
          <div class="row">
             <div class="col-sm-12">
+                <p>Your garment will be well wrapped for transit, and for mutual peace of mind, it will be sent using a ‘signed for’ service – usually either Hermes or Royal Mail 2nd class. As a rule of thumb, both these services take 3 – 5 days.<br /><br />
                 
+                I do not charge for postage at the point of purchase, but I am not able to support costs incurred through the return of goods.  However, as there are comprehensive fitting notes for each garment, it is to be hoped that returns are unlikely to be necessary.<br /><br />
+                
+                I am unable to accept damaged or worn garments as returns, and I take numerous photographs indicating the condition of garments at the point they are wrapped for transit.
+</p>
             </div>
         </div>
         <div class="row">
