--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -40,17 +40,25 @@
                         <li><a href="./shop.html">Shop</a></li>
                         <li><a href="./delivery.html">Delivery</a></li>
                         <li><a href="./gallery.html">Gallery</a></li>
+                        <li><a href="./ULinks.html">Links</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
+        <div class="row">
+           <div class="col-sm-12">
+               <h1>Important:  Please read notes on <a href="./contr:fit.html">‘Construction and Fit’</a>, as these dresses do not fit as standard sizes.</h1>
+            </div>
+        </div>
 
         <div class="row">
-           <div class="col-sm-6">
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam officia perspiciatis culpa nobis laboriosam minima, nisi vitae, eius obcaecati rem laborum voluptatibus sint, architecto blanditiis voluptatem placeat ut quae. Veritatis!</p>
+           <div class="col-md-6">
+                <h3>AE21	Size guide 20 / 22</h3>
+                <p>This fully adjustable pink floral day dress has fuscia pink cotton trim to waist and lace finishings at hem & sleeves. It is made from what I can best describe as a light, cotton-rich upcycled fabric as from touch alone I suspect there may be a little poly in the mix.  Conseqently, to avoid any danger of ‘cling’, the skirt is fully lined in 100% cotton muslin.  Seams are machine-finished to prevent fraying, and there is a generous hem of approximately 3”. As made, the length of the skirt from the bottom of the underbust band to the lower edge of the hem is approximately 40 <br />
+                The underbust is elasticated for adjustable fit, measuring approximately 43.5 inches when fully stretched.  The fullest part of the bodice, when measured front and back laid flat, is approximately 48” altogether.  The neckline is adjustable with a drawstring of Beresford’s ribbon.  There is a pin-in modesty panel included for the back.</p>
            </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                <img src="../Media/IMG/AE21/IMG_2959%20copy.JPG" alt="AE21 Front" class="dress-long myImages">
                 <img src="../Media/IMG/AE21/IMG_2956%20copy.JPG" alt="AE21 Back" class="dress-long myImages">
                 <img src="../Media/IMG/AE21/IMG_2957%20copy.JPG" alt="AE21 Side" class="dress-long myImages">
@@ -59,10 +67,12 @@
         </div>
         <hr>
         <div class="row">
-           <div class="col-sm-6">
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ut laborum nulla tempore doloremque molestias quidem nostrum fuga, ad delectus dolorum odio dicta qui autem quae impedit dolor! Eveniet, consequatur.</p>
+           <div class="col-md-6">
+               <h3>EW22	Size guide 22 / 24</h3>
+                <p>This fully adjustable pink & ivory striped floral day dress has ivory lace finishings at hem and sleeves.  The underbust band is finished with pretty machine-embroidery, but there is also an optional Beresford’s pink ribbon (loops are attached under the arms and at the rear) included for choice of wear.  The fabric is a robust cotton, so although the bodice is fully lined, it is unnecessary for the skirt.  French seams have been employed on the main seams; the armhole seams are fully bound.  <br />
+                The underbust is elasticated for adjustable fit, measuring approximately 46 inches when fully stretched.  The fullest part of the bodice, when measured front and back laid flat, is approximately 50” altogether.  The neckline is adjustable with a drawstring of Beresford’s ribbon.  There is a pin-in modesty panel included for the back.  As made, the length of the skirt from the bottom of the underbust band to the lower edge of the hem is approximately 42”, but there is a generous 4” hem which could be let down.</p>
            </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                <img src="../Media/IMG/EW22/IMG_2931%20copy.JPG" alt="EW22 Back" class="dress-long myImages">
                 <img src="../Media/IMG/EW22/IMG_2930%20copy.JPG" alt="EW22 Side" class="dress-long myImages">
                 <img src="../Media/IMG/EW22/IMG_2929%20copy.JPG" alt="EW22 Front" class="dress-long myImages">
@@ -71,10 +81,12 @@
         </div>
          <hr>
         <div class="row">
-                      <div class="col-sm-6">
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ut laborum nulla tempore doloremque molestias quidem nostrum fuga, ad delectus dolorum odio dicta qui autem quae impedit dolor! Eveniet, consequatur.</p>
+                      <div class="col-md-6">
+               <h3>EW23	Size guide 22 / 24</h3>
+                <p>This flouncy, fully adjustable floral day dress has an off-white background with little sprays of green and pink flowers dotted across it.  There is pale ivory lace trim to the sleeves, and a gorgeous, deep flounce around the hem - both of which are finished with narrow pink Beresford’s satin ribbon.  Included, but not photographed, is a long sash made from the same material which can be worn under the bustline as an additional option.  As this upcycled vintage fabric was given to me, I cannot be sure, but am 99% certain that it is cotton from the ‘feel’ of it.  However, just to be on the safe side, I have lined the skirt with 100% muslin.  Naturally, the bodice is fully lined and the armhole seams are bound.  <br />
+                The underbust is elasticated for adjustable fit, measuring approximately 45.5 inches when fully stretched.  The fullest part of the bodice, when measured front and back laid flat, is approximately 50” altogether.  The neckline is adjustable with a drawstring of Beresford’s ribbon with small, pearlised buttons at the ends.  There is a pin-in modesty panel included for the back.  As made, the length of the skirt from the bottom of the underbust band to the lower edge of the hem is approximately 42”, but there is a generous 4” hem which could be let down.</p>
            </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                <img src="../Media/IMG/EW23/IMG_2938%20copy.JPG" alt="EW23 Back" class="dress-long myImages">
                 <img src="../Media/IMG/EW23/IMG_2939%20copy.JPG" alt="EW23 Side" class="dress-long myImages">
                 <img src="../Media/IMG/EW23/IMG_2940%20copy.JPG" alt="EW23 Front" class="dress-long myImages">
@@ -83,10 +95,13 @@
         </div>
          <hr>
         <div class="row">
-                       <div class="col-sm-6">
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ut laborum nulla tempore doloremque molestias quidem nostrum fuga, ad delectus dolorum odio dicta qui autem quae impedit dolor! Eveniet, consequatur.</p>
+                       <div class="col-md-6">
+               <h3>FP21	Size guide 20 / 22</h3>
+                <p>This fully adjustable floral day dress with ivory background has old-fashioned, reclaimed deep ivory lace finishings at hem and sleeves.  The pretty polycotton fabric has been ‘rescued’, having had a previous life as a pair of curtains, but I felt it was far too pretty to pass by.  The bodice is fully lined and the skirt also has a three-quarter lining made from 100% cotton muslin.  Seams are finished simply with machine zig-zag stitch.<br />
+                As a point of note, the photographed example of the internal construction of a full dress is actually of this particular garment.<br />
+                    The underbust is elasticated for adjustable fit, measuring approximately 43 inches when fully stretched.  The fullest part of the bodice, when measured front and back laid flat, is approximately 48” altogether.  The neckline is adjustable with a drawstring of Beresford’s ribbon.  There is a pin-in modesty panel included for the back.  As made, the length of the skirt from the bottom of the underbust band to the lower edge of the hem is approximately 39”.  Please note that, due to the limited amount of fabric available to work with for this dress, <b class="imp">there is no extra hem allowance to make lengthening possible.</b></p>
            </div>
-            <div class="col-sm-6" id="FP21">
+            <div class="col-md-6" id="FP21">
                 <img src="../Media/IMG/FP21/IMG_2922%20copy.JPG" alt="FP21 Wide" class="fp-long myImages">
                 <img src="../Media/IMG/FP21/IMG_2924%20copy.JPG" alt="FP21 Side" class="fpr-wide myImages">
                 <img src="../Media/IMG/FP21/IMG_2925%20copy.JPG" alt="FP21 Front" class="fpl-wide myImages">
