--- a/Pages/contr:fit.html
+++ b/Pages/contr:fit.html
@@ -39,16 +39,17 @@
                         <li><a href="./shop.html">Shop</a></li>
                         <li><a href="./delivery.html">Delivery</a></li>
                         <li><a href="./gallery.html">Gallery</a></li>
+                        <li><a href="./ULinks.html">Links</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
          <div class="row">
-            <div class="col-sm-12">
+            <div class="col-md-12">
                 <h1>Construction & Fit</h1>
                 <p>
-                <b>Important:  Please read notes on ‘Construction and Fit’, as these dresses do not fit as standard sizes.</b>
+                <b class="imp">Important: Please read notes on ‘Construction and Fit’, as these dresses do not fit as standard sizes.</b> <br />
                 <img src="../Media/IMG/C:F1.png" alt="Fit 1" id="Fit1">
                 <img src="../Media/IMG/C:F2.png" alt="Fit 2" id="Fit2"><br /> 
                     Dependent upon the type and quality of fabric used and the design of the garment, different finishing methods may have been employed in the construction of the dress.  That is, at the more ‘purse-kind’ end of the range (e.g. upcycled polycotton), and for thicker fabrics, seams may be finished with machine zig-zag stitch, whereas for virgin cottons and satins edges are more likely to be bound or French seamed.
@@ -67,7 +68,7 @@
                 <p>
                     The underbust on all the drawstring dresses is fitted with elastic, which is fully adjustable to fit.  You will find that there is a loop of elastic protruding from the drawstring channel on the inside of the fabric for this purpose, held in place for transit with a safety pin.  One fitted to size, it may be best to put some strong stitches in the elastic to secure unless you envisage having to make fluctuating adjustments in the future.  Should you find you need to take out some fullness at the bust, I find the best method is to simply put in a couple of vertical seams at the front from neck channel to underbust channel, placed so that they disappear into the gathers. <br /><br />
 Most garments have a reasonable hem which can be let down, and I have in most cases been able to affix any trims away from the hem stitching to make this easier.  To take up dresses with a lace trim or flounce, I would suggest pinching all the way around ABOVE the trim until the desired shortened length is achieved then stitching the resulting channel in place, rather than the more laborious method of taking the trim off, shortening the hem, then replacing the trim.<br /><br />
-Finally, a note on Underwear!!!<br /><br />
+<b class="imp">Finally, a note on Underwear!!!</b><br /><br />
 While it is great if you have them, there is absolutely no need at all to go to the trouble of obtaining ‘short stays’, as there are a few unconventional cheats you can employ.  I find a good, supportive balcony bra (M&S padded, underwired ‘Fleur’ is my article of choice here) is adequate for the non-gathered bodices.  However, for the drawstring styles, the gathering tends to fall down the cleavage gap, so I sew a robust panel (use something like ‘Peltex Ultra-Firm Sew-In Stabilizer’) to the bra from centre of cup to centre of cup and tack it in place to the underwiring channels of the bra.  For lighter fabrics, this is sufficient, but for stronger fabrics it is sometimes necessary to place some padding behind the panel in the gap area - I find a rolled-up pair of socks to be just the thing!  Not particularly elegant, but it does the job!
 
                 </p>
