--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <li><a href="./Pages/shop.html">Shop</a></li>
                         <li><a href="./Pages/delivery.html">Delivery</a></li>
                         <li><a href="./Pages/gallery.html">Gallery</a></li>
+                        <li><a href="./Pages/ULinks.html">Links</a></li>
                         <li><a href="./Pages/contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -49,16 +50,16 @@
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="item active">
-                      <img class="d-block w-50" src="./Media/IMG/1.png" alt="First slide">
+                      <img class="d-block w-50" src="./Media/IMG/AE21/IMG_2959%20copy.JPG" alt="AE21">
                     </div>
                     <div class="item">
-                      <img class="d-block w-50" src="./Media/IMG/2.png" alt="Second slide">
+                      <img class="d-block w-50" src="./Media/IMG/EW22/IMG_2929%20copy.JPG" alt="EW22">
                     </div>
                     <div class="item">
-                      <img class="d-block w-50" src="./Media/IMG/3.png" alt="Third slide">
+                      <img class="d-block w-50" src="./Media/IMG/EW23/IMG_2940%20copy.JPG" alt="EW23">
                     </div>
                     <div class="item">
-                      <img class="d-block w-50" src="./Media/IMG/4.png" alt="Third slide">
+                      <img class="d-block w-50" src="./Media/IMG/FP21/IMG_2922%20copy.JPG" alt="FP21">
                     </div>
                   </div>
                 </div>
