--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -98,10 +98,11 @@
                        <div class="col-md-6">
                <h3>FP21	Size guide 20 / 22</h3>
                 <p>This fully adjustable floral day dress with ivory background has old-fashioned, reclaimed deep ivory lace finishings at hem and sleeves.  The pretty polycotton fabric has been ‘rescued’, having had a previous life as a pair of curtains, but I felt it was far too pretty to pass by.  The bodice is fully lined and the skirt also has a three-quarter lining made from 100% cotton muslin.  Seams are finished simply with machine zig-zag stitch.<br />
-                As a point of note, the photographed example of the internal construction of a full dress is actually of this particular garment.<br />
+
                     The underbust is elasticated for adjustable fit, measuring approximately 43 inches when fully stretched.  The fullest part of the bodice, when measured front and back laid flat, is approximately 48” altogether.  The neckline is adjustable with a drawstring of Beresford’s ribbon.  There is a pin-in modesty panel included for the back.  As made, the length of the skirt from the bottom of the underbust band to the lower edge of the hem is approximately 39”.  Please note that, due to the limited amount of fabric available to work with for this dress, <b class="imp">there is no extra hem allowance to make lengthening possible.</b></p>
            </div>
             <div class="col-md-6" id="FP21">
+               <p style="padding: 60px 0"> As a point of note, the photographed example of the internal construction of a full dress is actually of this particular garment.</p>
                 <img src="../Media/IMG/FP21/IMG_2922%20copy.JPG" alt="FP21 Tall Front" class="fp-long myImages">
                 <img src="../Media/IMG/FP21/IMG_2924%20copy.JPG" alt="FP21 Wide Front" class="fpr-wide myImages">
                 <img src="../Media/IMG/FP21/IMG_2925%20copy.JPG" alt="FP21 Wide Side" class="fpl-wide myImages">
